fix z-index issue

--- a/src/scss/components/NavBar.scss
+++ b/src/scss/components/NavBar.scss
@@ -54,6 +54,7 @@ $menu-bar-container-width: 80px;
   justify-content: space-evenly;
 
   min-width: 200px;
+  z-index: 1;
 }
 
 /* animations */
@@ -68,8 +69,7 @@ $menu-bar-container-width: 80px;
 }
 
 .hamburger-bar.clicked:nth-child(3) {
-  transform: rotate(-45deg)
-    translate(0, -1 * (calc($menu-bar-container-width / 2) - 1));
+  transform: rotate(-45deg) translate(0, -1 * (calc($menu-bar-container-width / 2) - 1));
   transition: ease-out 0.5s;
 }
 
@@ -122,6 +122,7 @@ $menu-bar-container-width: 80px;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
+
 .ham-menu-btn-link-contact:hover {
   color: $default-teal;
   background-color: $default-white;
