--- a/src/scss/components/modals/LoginModal.scss
+++ b/src/scss/components/modals/LoginModal.scss
@@ -9,8 +9,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-
-    z-index: 100;
 }
 
 .login {
@@ -26,7 +24,6 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        z-index: 101;
 
         margin-left: auto;
         margin-right: auto;
